--- a/views/document/accdoc.ejs
+++ b/views/document/accdoc.ejs
@@ -77,6 +77,10 @@
     });
 });
 </script>
+<script type="text/html" id="checkboxTpl">
+  <!-- 这里的 checked 的状态只是演示 -->
+  <input type="checkbox" name="lock" value="{{d.id}}" title="锁定" lay-filter="lockDemo" {{ d.id == 10006 ? 'checked' : '' }}>
+</script>
 <script>
 layui.use('table', function(){
   var table = layui.table;
@@ -95,6 +99,7 @@ layui.use('table', function(){
       ,{field: 'creditsum', title: '贷方合计', width:100}
       ,{field: 'checkstatus', title: '审核状态', width:80}
       ,{field: 'poststatus', title: '过账状态', width:80}
+      //,{field:'lock', title:'是否锁定', width:110, templet: '#checkboxTpl', unresize: true}
       ,{field: 'operation', title: '操作', fixed: 'right', width:120, align:'center', toolbar: '#barDemo'}
     ]]
     ,id: 'accdocTest'
