--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -1,9 +1,27 @@
-<% layout('layout') -%>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>后台系统管理</title>
+	<meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
 
-<div class="row">
-	<div class="col-lg-6 col-md-offset-3">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/font.css">
+	<link rel="stylesheet" href="./css/xadmin.css">
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./js/xadmin.js"></script>
 
-		<% if (message.length > 0) { %>
+</head>
+<body class="login-bg">
+    
+    <div class="login">
+        <div class="message">管理登录</div>
+        <div id="darkbannerwrap"></div>
+        <% if (message.length > 0) { %>
 			<div class="alert alert-danger alert-dismissible">
 				<button type="button" class="close" data-dismmiss="alert" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
@@ -11,23 +29,47 @@
 				<%= message %>
 	 		</div> 
 		<% } %>
+        <form method="post" class="layui-form" >
+            <input name="email" placeholder="邮箱"  type="text" lay-verify="required" class="layui-input" >
+            <hr class="hr15">
+            <input name="password" lay-verify="required" placeholder="密码"  type="password" class="layui-input">
+            <hr class="hr15">
+            <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="submit">
+            <hr class="hr20" >
+        </form>
+    </div>
 
-		<form method="post">
+    <script>
+        $(function  () {
+            layui.use('form', function(){
+              var form = layui.form;
+              // layer.msg('玩命卖萌中', function(){
+              //   //关闭后的操作
+              //   });
+              //监听提交
+              form.on('submit(login)', function(data){
+                // alert(888)
+                layer.msg(JSON.stringify(data.field),function(){
+                    //location.href='/'
+                    $.ajax({
+                      type : "post",
+                      url: "/login",
+                    data:{
+                         },
+                   success: function(data) { 
+                    }
+                  });
+                });
+                return false;
+              });
+            });
+        })
 
-			<h1> 登录 </h1>
+        
+    </script>
 
-
-			<div class="form-group">
-			  <label="email">邮箱: </label>
-			  <input type="email" class="form-control" name="email">
-			</div>
-			<div class="form-group">
-			  <label="password">密码: </label>
-			  <input type="password" class="form-control" name="password">
-			</div>
-
-			<button type="submit" class="btn btn-success">保存</button>
-
-		</form>
-	</div>
-</div>
+    
+    <!-- 底部结束 -->
+    
+</body>
+</html>
