--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -5,7 +5,7 @@
       <div class="container">
         <h1>财务管理系统</h1>
         <p>中小型企业的财务管理ERP首选</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Signup &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Login &raquo;</a></p>
       </div>
     </div>
 
@@ -13,20 +13,19 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>财务业务数据及时掌控</h2>
+          <h2>财务业务数据掌控</h2>
           <p>极致的用户体验、完善的功能结构，
-          我们为小微企业提供全生命周期的服务</p>
+          为小微企业提供全生命周期的服务</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>智能凭证、智能报表</h2>
-          <p>账簿、会计报表自动生成；智能记账；丰富的凭证模板，快速录入凭证</p>
+          <p>账簿、会计报表自动生成；智能记账；快速录入凭证</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>多仓库多门店连锁经营管理</h2>
-          <p>采购、销售、仓管相关业务流程清晰；
-          财务可紧密把控业务过程，数据及时掌控，规避经营风险</p>
+          <h2>会计人员分工明确</h2>
+          <p>财务可紧密把控业务过程，数据及时掌控，规避经营风险</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
