--- a/views/document/docitem.ejs
+++ b/views/document/docitem.ejs
@@ -23,14 +23,14 @@
             <cite>导航元素</cite></a>
         </span>
     </div>
+    <div class="x-body">
     <div class="demoTable">
-      <div class="x-body">
         <div class="layui-row">
           <form class="layui-form layui-col-md12 x-so">
             <input type="text" name="adnum"  placeholder="请输入凭证号" id="adnum" autocomplete="off" class="layui-input">
             <input type="text" class="layui-input" placeholder="日期范围" id="date">
             <!--<input class="layui-input" placeholder="截止日" name="end" id="end">-->
-            <input type="text" name="maker"  placeholder="请输入制单人" id="maker" autocomplete="off" class="layui-input">
+            <!--<input type="text" name="maker"  placeholder="请输入制单人" id="maker" autocomplete="off" class="layui-input">-->
             <!--<input type="text" name="headercode"  placeholder="请输入摘要号" autocomplete="off" class="layui-input">
             <input type="text" name="accountcode"  placeholder="请输入科目号" autocomplete="off" class="layui-input">-->
             <div class="layui-input-inline">
@@ -50,95 +50,48 @@
             <button class="layui-btn" data-type="reload"><i class="layui-icon">&#xe615;</i></button>
           </form>
         </div>
-        <xblock>
+        <!--<xblock>
           <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
           <button class="layui-btn" onclick="x_admin_show('记账凭证','/addaccdoc')"><i class="layui-icon"></i>添加</button>
-        </xblock>
+        </xblock>-->
     </div>
     </div>
  
-<table class="layui-hide" id="LAY_table_accdoc" lay-filter="accdoc"></table> 
+<table class="layui-hide" id="LAY_table_docitem" lay-filter="docitem"></table> 
                
           
 <script src="./lib/layui/layui.js" charset="utf-8"></script>
 <!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
-<script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="detail" >查看</a>
+<!--<script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn layui-btn-xs" lay-event="edit">修改</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-</script>
-<script>
-layui.use('laydate', function(){
-      var laydate = layui.laydate;
-      //执行一个laydate实例
-      //日期范围选择
-      laydate.render({ 
-      elem: '#date'
-      ,range: true //或 range: '~' 来自定义分割字符
-    });
-});
-</script>
-<script type="text/html" id="checkboxTpl">
-  <!-- 这里的 checked 的状态只是演示 -->
-  <input type="checkbox" name="lock" value="{{d.id}}" title="锁定" lay-filter="lockDemo" {{ d.id == 10006 ? 'checked' : '' }}>
-</script>
+</script>-->
 <script>
 layui.use('table', function(){
   var table = layui.table;
   
   //方法级渲染
   table.render({
-    elem: '#LAY_table_accdoc'
-    ,url: '/api/accdoc'
+    elem: '#LAY_table_docitem'
+    ,url: '/api/docitem'
     ,cols: [[ //表头
       {checkbox: true, fixed: true}
-      ,{field: 'num', title: '凭证号', width:100, sort: true, fixed: 'left'}
-      ,{field: 'docdate', title: '录入日期', width:100, sort: true}
-      ,{field: 'postdate', title: '入账日期', width:100, sort: true}
-      ,{field: 'maker', title: '制单人', width:100}
-      ,{field: 'debitsum', title: '借方合计', width:100}
-      ,{field: 'creditsum', title: '贷方合计', width:100}
-      ,{field: 'checkstatus', title: '审核状态', width:80}
-      ,{field: 'poststatus', title: '过账状态', width:80}
-      //,{field:'lock', title:'是否锁定', width:110, templet: '#checkboxTpl', unresize: true}
-      ,{field: 'operation', title: '操作', fixed: 'right', width:160, align:'center', toolbar: '#barDemo'}
+      ,{field: 'num', title: '凭证号', width:150, sort: true, fixed: 'left'}
+      ,{field: 'id', title: 'id', width:100, sort: true, fixed: 'left'}
+      ,{field: 'header', title: '摘要名称', width:150}
+      ,{field: 'account', title: '科目名称', width:150}
+      ,{field: 'debit', title: '借方金额', width:150}
+      ,{field: 'credit', title: '贷方金额', width:150}
+      //,{field: 'operation', title: '操作', fixed: 'right', width:160, align:'center', toolbar: '#barDemo'}
     ]]
-    ,id: 'accdocTest'
+    ,id: 'docitemTest'
     ,page: true
     ,height: 315
   });
-
   
   var $ = layui.$, active = {
-    reload: function(){
-      var numReload = $('#adnum');
-      var dateReload = $('#date');
-      var makerReload = $('#maker');
-      var checkReload = $('#checkstatus');
-      var postReload = $('#poststatus');
-      
-      laydate.render({ 
-       elem: '#test'
-      ,min: '2017-1-1'
-      ,max: '2017-12-31'
-      });
-      
-      //执行重载
-      table.reload('accdocTest', {
-        page: {
-          curr: 1 //重新从第 1 页开始
-        }
-        ,where: {
-            num: numReload.val()
-            ,docdate: dateReload.val()
-            ,maker: makerReload.val()
-            ,checkstatus: checkReload.val()
-            ,poststatus: postReload.val()     
-        }
-      });
-    }
+   
   };
-  
 
   
   $('.demoTable .layui-btn').on('click', function(){
@@ -146,8 +99,12 @@ layui.use('table', function(){
     active[type] ? active[type].call(this) : '';
   });
 
-  
-  table.on('tool(accdoc)', function(obj){ //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
+table.on('checkbox(docitem', function(obj){
+      console.log(obj)
+        });
+
+
+table.on('tool(docitem)', function(obj){ //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
   var data = obj.data; //获得当前行数据
   var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
   var tr = obj.tr; //获得当前行 tr 的DOM对象
@@ -156,9 +113,9 @@ layui.use('table', function(){
          //向服务端发送删除指令
         $.ajax({
            type : "post",
-           url: "/deleteaccdoc",
+           url: "/deleteheader",
            data:{
-              'num' : obj.data.num
+              'headercode' : obj.data.code
             },
            success: function(data) { 
               //判断是否删除成功
@@ -171,23 +128,10 @@ layui.use('table', function(){
         layer.close(index);
     });
   }
-  
-  else if(layEvent === 'detail'){ //查看
-    var url = "/viewaccdoc?num=" + obj.data.num;
-    x_admin_show('查看凭证',url);
-  /*
-    $.ajax({
-           type :"post",
-           url: "/viewaccdoc",
-           data:{
-              'num' : obj.data.num
-            },
-           success: function(data) { 
-           }
-      });
-    */
-  }
+
 });
+ 
+
 
 });
 </script>
