--- a/views/sheet/profitloss.ejs
+++ b/views/sheet/profitloss.ejs
@@ -23,7 +23,7 @@
         <div class="x-body">
             <div class="demoTable">
                 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-                    <legend>资产负债表 (2018年5月30日,人民币)</legend>
+                    <legend>损益表 (2018年5月30日,人民币)</legend>
                 </fieldset>
               <!--<blockquote class="layui-elem-quote layui-quote-nm">
                   2018年5月30日
@@ -34,19 +34,15 @@
               </div>
             
 
-                <table class="layui-table" lay-data="{url:'/api/blsheet', height: 'full-200', cellMinWidth: 80, page: true,
-                limit:100, initSort: {field:'assnum', type:'asc'}}">
+                <table class="layui-table" lay-data="{url:'/api/plsheet', height: 'full-200', width:570, cellMinWidth: 80, page: true,
+                limit:100, initSort: {field:'plnum', type:'asc'}}">
                   <thead>
                     <tr>
-                      <th lay-data="{field:'assproj', width:180}">资产</th>
-                      <th lay-data="{field:'assnum', width:60, align:'center', sort: true}">行次</th>
-                      <th lay-data="{field:'assendbln', width:120, align:'center'}">期末余额</th>
-                      <th lay-data="{field:'assstartbln', width:120, align:'center'}">年初余额</th>
-                
-                      <th lay-data="{field:'liabproj', width:200}">负债及所有者权益</th>
-                      <th lay-data="{field:'liabnum', width:60, align:'center', sort: true}">行次</th>
-                      <th lay-data="{field:'liabendbln', width:120, align:'center'}">期末余额</th>
-                      <th lay-data="{field:'liabstartbln', width:120, align:'center'}">年初余额</th>
+                      <th lay-data="{field:'plproj', width:220}">项目</th>
+                      <th lay-data="{field:'plnum', width:70, align:'center', sort: true}">行次</th>
+                      <th lay-data="{field:'plmonthamt', width:140, align:'center'}">本月数</th>
+                      <th lay-data="{field:'plyearamt', width:140, align:'center'}">本年累计数</th>
+    
                     </tr>
                   </thead>
                 </table>
